--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<md-toolbar color="primary" class="shadow">
+<md-toolbar color="primary" class="header-toolbar">
   <span>Student Skills</span>
   <span class="fill-remaining-space"></span>
   <button md-button [mdMenuTriggerFor]="appMenu"><md-icon>face</md-icon> Cathy</button>
