--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,2 @@
-<md-toolbar color="primary" class="header-toolbar">
-  <span>Student Skills</span>
-  <span class="fill-remaining-space"></span>
-  <button md-button [mdMenuTriggerFor]="appMenu"><md-icon>face</md-icon> Cathy</button>
-</md-toolbar>
-
-<md-menu #appMenu="mdMenu">
-  <button md-menu-item> Log out </button>
-  <button md-menu-item> ? </button>
-</md-menu>
+<ssi-header></ssi-header>
+<ssi-navigation></ssi-navigation>
