--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,16 @@
-.fill-remaining-space {
-  flex: 1 1 auto;
+ssi-header {
+  box-shadow:
+    0 3px 5px -1px rgba(0,0,0,.2),
+    0 6px 10px 0 rgba(0,0,0,.14),
+    0 1px 18px 0 rgba(0,0,0,.12);
+  color: white;
+  display: block;
+  position: relative;
+  z-index: 10;
 }
 
-.header-toolbar {
-  box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
+ssi-navigation {
+  display: flex;
+  flex: 1 1 auto;
+  overflow-y: auto;
 }
