--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,16 @@
 @import '~@angular/material/prebuilt-themes/pink-bluegrey.css'; /* csslint allow: import */
 
 body {
-    background:lightgray;
-    margin: 0;
+  font-family: "Roboto, Helvetica Neue Light, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif";
+  margin: 0;
+}
+
+ssi-root {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
 }
