--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,9 +1,15 @@
 <md-sidenav-container class="navigation-container">
   <md-sidenav #sidenav class="navigation-content" mode="side" opened="true">
-    Navigation menu
+    <nav>
+      <ul>
+        <li><a routerLink="/classes" routerLinkActive="active-link" class="">Gestion des classes</a></li>
+        <li><a routerLink="/notes" routerLinkActive="active-link">Saisie des notes</a></li>
+        <li><a routerLink="/tracking" routerLinkActive="active-link">Suivi des progrès</a></li>
+      </ul>
+    </nav>
   </md-sidenav>
 
   <div class="navigation-sidenav-content">
-    Content
+    <router-outlet></router-outlet>
   </div>
 </md-sidenav-container>
