--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -5,11 +5,51 @@
 .navigation-content {
   box-shadow: 3px 0 6px rgba(0,0,0,.24);
   overflow: auto;
-  padding: 15px;
 }
 
 .navigation-sidenav-content {
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  padding: 10px;
+  font-family: "Roboto";
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-color: rgba(255, 255, 255, 0.06);
+  color: rgba(255, 255, 255, 0.7);
+  margin: 0;
+  padding: 0;
+}
+
+li>a {
+  box-sizing: border-box;
+  display: block;;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 47px;
+  text-decoration: none;
+  transition: all .3s;
+  padding: 0 16px;
+  position: relative;
+  font-family: "Roboto";
+}
+
+li>a.active-link {
+  background: #303030;
+  color: #e91e63;
+  font-weight: 600;
+}
+
+li>a:hover {
+  background: #303030;
+  color: #e91e63;
 }
