--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -2,7 +2,7 @@
   <md-sidenav #sidenav class="navigation-content" mode="side" opened="true">
     <nav>
       <ul>
-        <li><a routerLink="/classes" routerLinkActive="active-link" class="">Gestion des classes</a></li>
+        <li><a routerLink="/classes" routerLinkActive="active-link">Gestion des classes</a></li>
         <li><a routerLink="/notes" routerLinkActive="active-link">Saisie des notes</a></li>
         <li><a routerLink="/tracking" routerLinkActive="active-link">Suivi des progrès</a></li>
       </ul>
