--- a/src/app/components/classes.component.html
+++ b/src/app/components/classes.component.html
@@ -1,8 +1,16 @@
 <div>Classes</div>
 <p></p>
 
-<md-nav-list>
+<!-- <md-nav-list>
   <a md-list-item href="/class/{{class.id}}" *ngFor="let class of classes">{{class.name}}</a>
-</md-nav-list>
+</md-nav-list> -->
 
-<router-outlet></router-outlet>
+<md-card *ngFor="let class of classes" class="class">
+  <md-card-content class="class-content">
+    <p>{{class.name}}</p>
+  </md-card-content>
+  <md-card-actions class="class-actions">
+    <button md-button (click)="goToDetails(class)"><md-icon>people_outline</md-icon>  Détails</button>
+    <button md-button><md-icon>clear</md-icon></button>
+  </md-card-actions>
+</md-card>
