--- a/src/app/components/class/class-details.component.css
+++ b/src/app/components/class/class-details.component.css
@@ -5,3 +5,21 @@
 .last-name {
   margin-left: 5px;
 }
+
+.student {
+  box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+  display: block;
+  width: 250px;
+  margin: 15px;
+  padding: 3px;
+  float: left;
+}
+
+.student-content {
+  text-align: center;
+}
+
+.student-actions {
+  display: flex;
+  justify-content: space-between;
+}
