--- a/src/app/components/classes.component.html
+++ b/src/app/components/classes.component.html
@@ -10,7 +10,10 @@
     <p>{{class.name}}</p>
   </md-card-content>
   <md-card-actions class="class-actions">
-    <button md-button (click)="goToDetails(class)"><md-icon>people_outline</md-icon>  Détails</button>
-    <button md-button><md-icon>clear</md-icon></button>
+    <div>
+      <button md-icon-button (click)="goToDetails(class)"><md-icon>toc</md-icon></button>
+      <button md-icon-button><md-icon>edit</md-icon></button>
+    </div>
+    <button md-icon-button><md-icon>clear</md-icon></button>
   </md-card-actions>
 </md-card>
