restyle page heaeder

--- a/src/app/components/class/class-details.component.html
+++ b/src/app/components/class/class-details.component.html
@@ -1,12 +1,5 @@
-<div>Détails de la {{className}}</div>
+<ssi-page-header title="Détail de la {{className}}"></ssi-page-header>
 <p></p>
-
-<!-- <md-nav-list>
-  <md-list-item *ngFor="let student of students">
-    <div class="first-name">{{student.firstName}}</div>
-    <div class="last-name">{{student.lastName}}</div>
-  </md-list-item>
-</md-nav-list> -->
 
 <md-card *ngFor="let student of students" class="student">
   <md-card-content class="student-content">
