--- a/src/app/components/classes.component.html
+++ b/src/app/components/classes.component.html
@@ -10,6 +10,6 @@
       <button md-icon-button (click)="goToDetails(class)"><md-icon>toc</md-icon></button>
       <button md-icon-button (click)="openEditDialog(class)"><md-icon>edit</md-icon></button>
     </div>
-    <button md-icon-button><md-icon>clear</md-icon></button>
+    <button md-icon-button (click)="deleteClass(class)"><md-icon>clear</md-icon></button>
   </md-card-actions>
 </md-card>
