--- a/src/app/components/class/class-details.component.html
+++ b/src/app/components/class/class-details.component.html
@@ -6,7 +6,7 @@
     <p>{{student.firstName}} {{student.lastName}}</p>
   </md-card-content>
   <md-card-actions class="student-actions">
-    <button md-icon-button><md-icon>edit</md-icon></button>
-    <button md-icon-button><md-icon>clear</md-icon></button>
+    <button md-icon-button (click)="openEditDialog(student)"><md-icon>edit</md-icon></button>
+    <button md-icon-button (click)="deleteStudent(student)"><md-icon>clear</md-icon></button>
   </md-card-actions>
 </md-card>
