--- a/src/app/components/classes.component.css
+++ b/src/app/components/classes.component.css
@@ -2,6 +2,7 @@
   box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
   display: block;
   width: 300px;
+  height: 100px;
   margin: 15px;
   padding: 3px;
   float: left;
@@ -14,4 +15,27 @@
 .class-actions {
   display: flex;
   justify-content: space-between;
+}
+
+.class-add {
+  box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+  display: block;
+  width: 100px;
+  height: 100px;
+  margin: 15px;
+  padding: 3px;
+  float: left;
+}
+
+.class-content-add {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.add-icon {
+  width: 72px;
+  height: 72px;
+  font-size: 72px;
 }
