--- a/src/app/components/classes.component.html
+++ b/src/app/components/classes.component.html
@@ -13,3 +13,9 @@
     <button md-icon-button (click)="deleteClass(class)"><md-icon>clear</md-icon></button>
   </md-card-actions>
 </md-card>
+
+<md-card class="class-add">
+  <md-card-content class="class-content-add">
+    <button md-button color="basic" (click)="createClass()"><md-icon aria-hidden="true" class="add-icon">add</md-icon></button>
+  </md-card-content>
+</md-card>
