--- a/src/app/components/class/class-details.component.css
+++ b/src/app/components/class/class-details.component.css
@@ -10,6 +10,7 @@
   box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
   display: block;
   width: 250px;
+  height: 100px;
   margin: 15px;
   padding: 3px;
   float: left;
@@ -22,4 +23,27 @@
 .student-actions {
   display: flex;
   justify-content: space-between;
+}
+
+.student-add {
+  box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+  display: block;
+  width: 100px;
+  height: 100px;
+  margin: 15px;
+  padding: 3px;
+  float: left;
+}
+
+.student-content-add {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.student-icon {
+  width: 72px;
+  height: 72px;
+  font-size: 72px;
 }
