--- a/src/app/components/class/class-details.component.html
+++ b/src/app/components/class/class-details.component.html
@@ -10,3 +10,9 @@
     <button md-icon-button (click)="deleteStudent(student)"><md-icon>clear</md-icon></button>
   </md-card-actions>
 </md-card>
+
+<md-card class="student-add">
+  <md-card-content class="student-content-add">
+    <button md-button color="basic" (click)="createStudent()"><md-icon aria-hidden="true" class="student-icon">add</md-icon></button>
+  </md-card-content>
+</md-card>
