--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -3,6 +3,7 @@
     <nav>
       <ul>
         <li><a routerLink="/classes" routerLinkActive="active-link">Gestion des classes</a></li>
+        <li><a routerLink="/skills" routerLinkActive="active-link">Gestion des compétences</a></li>
         <li><a routerLink="/notes" routerLinkActive="active-link">Saisie des notes</a></li>
         <li><a routerLink="/tracking" routerLinkActive="active-link">Suivi des progrès</a></li>
       </ul>
