--- a/src/app/components/class/class-details.component.html
+++ b/src/app/components/class/class-details.component.html
@@ -1,18 +1,25 @@
 <ssi-page-header title="Détail de la {{className}}"></ssi-page-header>
 <p></p>
 
-<md-card *ngFor="let student of students" class="student">
-  <md-card-content class="student-content">
-    <p>{{student.firstName}} {{student.lastName}}</p>
-  </md-card-content>
-  <md-card-actions class="student-actions">
-    <button md-icon-button (click)="openEditDialog(student)"><md-icon>edit</md-icon></button>
-    <button md-icon-button (click)="deleteStudent(student)"><md-icon>clear</md-icon></button>
-  </md-card-actions>
-</md-card>
+<md-tab-group>
+  <md-tab label="Etudiants">
+    <md-card *ngFor="let student of students" class="student">
+      <md-card-content class="student-content">
+        <p>{{student.firstName}} {{student.lastName}}</p>
+      </md-card-content>
+      <md-card-actions class="student-actions">
+        <button md-icon-button (click)="openEditDialog(student)"><md-icon>edit</md-icon></button>
+        <button md-icon-button (click)="deleteStudent(student)"><md-icon>clear</md-icon></button>
+      </md-card-actions>
+    </md-card>
 
-<md-card class="student-add">
-  <md-card-content class="student-content-add">
-    <button md-button color="basic" (click)="createStudent()"><md-icon aria-hidden="true" class="student-icon">add</md-icon></button>
-  </md-card-content>
-</md-card>
+    <md-card class="student-add">
+      <md-card-content class="student-content-add">
+        <button md-button color="basic" (click)="createStudent()"><md-icon aria-hidden="true" class="student-icon">add</md-icon></button>
+      </md-card-content>
+    </md-card>
+  </md-tab>
+  <md-tab label="Compétences par défaut">
+    <p>To do...</p>
+  </md-tab>
+</md-tab-group>
