--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,10 @@
-<md-toolbar color="primary" class="header-toolbar">
+<mat-toolbar color="primary" class="header-toolbar">
   <span>Student Skills</span>
   <span class="fill-remaining-space"></span>
-  <button md-button [mdMenuTriggerFor]="appMenu"><md-icon>face</md-icon> Cathy</button>
-</md-toolbar>
+  <button mat-button [matMenuTriggerFor]="appMenu"><mat-icon>face</mat-icon> Cathy</button>
+</mat-toolbar>
 
-<md-menu #appMenu="mdMenu">
-  <button md-menu-item> Log out </button>
-  <button md-menu-item> ? </button>
-</md-menu>
+<mat-menu #appMenu="matMenu">
+  <button mat-menu-item> Log out </button>
+  <button mat-menu-item> ? </button>
+</mat-menu>
