--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,5 +1,5 @@
-<md-sidenav-container class="navigation-container">
-  <md-sidenav #sidenav class="navigation-content" mode="side" opened="true">
+<mat-sidenav-container class="navigation-container">
+  <mat-sidenav #sidenav class="navigation-content" mode="side" opened="true">
     <nav>
       <ul>
         <li><a routerLink="/classes" routerLinkActive="active-link">Gestion des classes</a></li>
@@ -8,9 +8,9 @@
         <li><a routerLink="/tracking" routerLinkActive="active-link">Suivi des progrès</a></li>
       </ul>
     </nav>
-  </md-sidenav>
+  </mat-sidenav>
 
   <div class="navigation-sidenav-content">
     <router-outlet></router-outlet>
   </div>
-</md-sidenav-container>
+</mat-sidenav-container>
