--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,17 @@ ssi-root {
   display: flex;
   flex-direction: column;
 }
+
+.mat-form-field.mat-form-field {
+  width: auto;
+}
+.mat-form-field.mat-form-field#fullSize {
+  width: 100%;
+}
+
+div#title {
+  font-family: "Roboto";
+  font-weight: 500;
+  margin-top: 15px;
+  max-width: 400px;
+}
