--- a/src/app/components/misc/confirm.component.html
+++ b/src/app/components/misc/confirm.component.html
@@ -1,9 +1,9 @@
-<h1 md-dialog-title>Confirmation</h1>
-<div md-dialog-content class="confirm-content">
-  <md-icon>warning</md-icon>
+<h1 matDialogTitle>Confirmation</h1>
+<div mat-dialog-content class="confirm-content">
+  <mat-icon>warning</mat-icon>
   Etes-vous de vouloir supprimer cet objet?
 </div>
-<div md-dialog-actions>
-  <button md-button [md-dialog-close]="{confirm: true}" tabindex="1">Confirmer</button>
-  <button md-button [md-dialog-close]="{confirm: false}" tabindex="-1">Annuler</button>
+<div mat-dialog-actions>
+  <button mat-button [matDialogClose]="{confirm: true}" tabindex="1">Confirmer</button>
+  <button mat-button [matDialogClose]="{confirm: false}" tabindex="-1">Annuler</button>
 </div>
