--- a/src/app/components/skill/skill-edit.component.html
+++ b/src/app/components/skill/skill-edit.component.html
@@ -1,28 +1,28 @@
-<h1 md-dialog-title>Propriétés de la compétence</h1>
-<div md-dialog-content>
+<h1 matDialogTitle>Propriétés de la compétence</h1>
+<div mat-dialog-content>
   <div>
-    <md-form-field>
-      <input mdInput tabindex="1" [(ngModel)]="data.shortName" name="shortName" placeholder="Nom court" required>
-      <md-error *ngIf="requiredValidator.hasError('required')">
-        Le nom court de la compétence est <strong>obligatore</strong>
-      </md-error>
-    </md-form-field>
+    <mat-form-field>
+      <input matInput tabindex="1" [(ngModel)]="data.shortName" name="shortName" placeholder="Nom court" required>
+      <mat-error *ngIf="requiredValidator.hasError('required')">
+        Le nom court de la compétence est <strong>obligatoire</strong>
+      </mat-error>
+    </mat-form-field>
   </div>
   <div>
-    <md-form-field>
-      <input mdInput tabindex="1" [(ngModel)]="data.longName" name="longName" placeholder="Nom complet" required>
-      <md-error *ngIf="requiredValidator.hasError('required')">
-        Le nom complet de la compétence est <strong>obligatore</strong>
-      </md-error>
-    </md-form-field>
+    <mat-form-field>
+      <input matInput tabindex="1" [(ngModel)]="data.longName" name="longName" placeholder="Nom complet" required>
+      <mat-error *ngIf="requiredValidator.hasError('required')">
+        Le nom complet de la compétence est <strong>obligatoire</strong>
+      </mat-error>
+    </mat-form-field>
   </div>
   <div>
-    <md-form-field>
-      <input mdInput tabindex="1" [(ngModel)]="data.description" name="description" placeholder="Description">
-    </md-form-field>
+    <mat-form-field>
+      <input matInput tabindex="1" [(ngModel)]="data.description" name="description" placeholder="Description">
+    </mat-form-field>
   </div>
 </div>
-<div md-dialog-actions>
-  <button md-button [md-dialog-close]="data" tabindex="2">Valider</button>
-  <button md-button (click)="onNoClick()" tabindex="-1">Annuler</button>
+<div mat-dialog-actions>
+  <button mat-button [matDialogClose]="data" tabindex="2">Valider</button>
+  <button mat-button (click)="onNoClick()" tabindex="-1">Annuler</button>
 </div>
