--- a/src/app/components/skills.component.html
+++ b/src/app/components/skills.component.html
@@ -1,21 +1,21 @@
 <ssi-page-header title="Compétences"></ssi-page-header>
 <p></p>
 
-<md-card *ngFor="let skill of skills" class="skill">
-  <h2 md-dialog-title class="skill-center">{{skill.shortName}}</h2>
-  <md-card-content class="skill-center">
-    <div mdTooltip="{{skill.description}}">{{skill.longName}}</div>
-  </md-card-content>
-  <md-card-actions class="skill-actions">
+<mat-card *ngFor="let skill of skills" class="skill">
+  <h2 matDialogTitle class="skill-center">{{skill.shortName}}</h2>
+  <mat-card-content class="skill-center">
+    <div matTooltip="{{skill.description}}">{{skill.longName}}</div>
+  </mat-card-content>
+  <mat-card-actions class="skill-actions">
     <div>
-      <button md-icon-button (click)="openEditDialog(skill)"><md-icon>edit</md-icon></button>
+      <button mat-icon-button (click)="openEditDialog(skill)"><mat-icon>edit</mat-icon></button>
     </div>
-    <button md-icon-button (click)="deleteSkill(skill)"><md-icon>clear</md-icon></button>
-  </md-card-actions>
-</md-card>
+    <button mat-icon-button (click)="deleteSkill(skill)"><mat-icon>clear</mat-icon></button>
+  </mat-card-actions>
+</mat-card>
 
-<md-card class="skill-add">
-  <md-card-content class="skill-content-add">
-    <button md-button color="basic" (click)="createSkill()"><md-icon aria-hidden="true" class="add-icon">add</md-icon></button>
-  </md-card-content>
-</md-card>
+<mat-card class="skill-add">
+  <mat-card-content class="skill-content-add">
+    <button mat-button color="basic" (click)="createSkill()"><mat-icon aria-hidden="true" class="add-icon">add</mat-icon></button>
+  </mat-card-content>
+</mat-card>
