--- a/src/app/components/test/tests.component.css
+++ b/src/app/components/test/tests.component.css
@@ -1,32 +1,37 @@
-.skill {
+.test-card {
   box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
   display: block;
   width: 300px;
-  margin: 15px;
   padding: 3px;
   float: left;
+  margin: 0 15px 15px 0;
 }
 
-.skill-center {
-  text-align: center;
+.test-header {
+  display: flex;
+  flex-direction: column;
 }
 
-.skill-actions {
+.test-subtitle {
+  font-size: x-small;
+}
+
+.test-actions {
   display: flex;
   justify-content: space-between;
 }
 
-.skill-add {
+.test-add {
   box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
   display: block;
-  width: 100px;
-  height: 100px;
-  margin: 15px;
+  /*width: 50px;
+  height: 50px;*/
   padding: 3px;
   float: left;
+  margin: 0 15px 15px 0;
 }
 
-.skill-content-add {
+.test-content-add {
   display: flex;
   justify-content: center;
   width: 100%;
@@ -34,11 +39,7 @@
 }
 
 .add-icon {
-  width: 72px;
-  height: 72px;
-  font-size: 72px;
-}
-
-mat-card.h2 {
-  text-align: center;
+  width: 48px;
+  height: 48px;
+  font-size: 48px;
 }
