--- a/src/app/components/test/test-edit.component.html
+++ b/src/app/components/test/test-edit.component.html
@@ -1,14 +1,14 @@
-<h1 matDialogTitle>Propriétés du devoir</h1>
+<h1 matDialogTitle>Propriétés du devoir {{data.test.name}}</h1>
 <div mat-dialog-content>
   <div class="content-main">
     <mat-form-field>
-      <input matInput tabindex="1" [(ngModel)]="data.name" name="name" placeholder="Nom du devoir" required>
+      <input matInput tabindex="1" [(ngModel)]="data.test.name" name="name" placeholder="Nom du devoir" required>
       <mat-error *ngIf="requiredValidator.hasError('required')">
         Le nom du devoir est <strong>obligatoire</strong>
       </mat-error>
     </mat-form-field>
     <mat-form-field>
-      <input matInput tabindex="2" [matDatepicker]="picker" placeholder="Date du devoir"  [(ngModel)]="data.date" required>
+      <input matInput tabindex="2" [matDatepicker]="picker" placeholder="Date du devoir"  [(ngModel)]="data.test.date" required>
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
       <mat-error *ngIf="requiredValidator.hasError('required')">
@@ -18,7 +18,7 @@
   </div>
   <div>
     <mat-form-field id="fullSize">
-      <textarea matInput tabindex="3" [(ngModel)]="data.description" name="description" placeholder="Description"></textarea>
+      <textarea matInput tabindex="3" [(ngModel)]="data.test.description" name="description" placeholder="Description"></textarea>
     </mat-form-field>
   </div>
 
