--- a/src/app/components/test/tests.component.html
+++ b/src/app/components/test/tests.component.html
@@ -5,7 +5,7 @@
   </mat-card-header>
   <mat-card-actions class="test-actions">
     <div>
-      <button mat-icon-button (click)="goToDetails(test)"><mat-icon>toc</mat-icon></button>
+      <button mat-icon-button (click)="goToTestResults(test)"><mat-icon>toc</mat-icon></button>
       <button mat-icon-button (click)="updateTest(test)"><mat-icon>edit</mat-icon></button>
     </div>
     <button mat-icon-button (click)="deleteTest(test)"><mat-icon>clear</mat-icon></button>
