--- a/src/app/components/test/test-results.component.html
+++ b/src/app/components/test/test-results.component.html
@@ -8,11 +8,11 @@
   </ng-container>
 
   <ng-container matColumnDef="total">
-    <mat-header-cell *matHeaderCellDef>Note</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef><div class="header-content">Note</div></mat-header-cell>
     <mat-cell *matCellDef="let row">{{row.total}}</mat-cell>
   </ng-container>
   <ng-container matColumnDef="total20">
-    <mat-header-cell *matHeaderCellDef>Note /20</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef><div class="header-content">Note /20</div></mat-header-cell>
     <mat-cell *matCellDef="let row">{{row.total20}}</mat-cell>
   </ng-container>
 
