focus on next input with Return key

--- a/src/app/components/test/test-results.component.html
+++ b/src/app/components/test/test-results.component.html
@@ -1,5 +1,4 @@
 <ssi-page-header title="Résultats du devoir {{testName}}"></ssi-page-header>
-<p></p>
 
 <mat-table [(dataSource)]="dataSource" class="table">
   <ng-container matColumnDef="Elève">
@@ -16,14 +15,16 @@
     <mat-cell *matCellDef="let row">{{row.total20}}</mat-cell>
   </ng-container>
 
-  <ng-container *ngFor="let skillColumn of skillColumns" [matColumnDef]="skillColumn.columnName">
+  <ng-container *ngFor="let skillColumn of skillColumns; let colId = index" [matColumnDef]="skillColumn.columnName">
     <mat-header-cell *matHeaderCellDef>
       <div class="header-content">
         <span>{{skillColumn.columnHeader}}</span>
         <span>{{skillColumn.columnScoreScale}}</span>
       </div>
     </mat-header-cell>
-    <mat-cell *matCellDef="let row"><input matInput type="number" min="0" [max]="getMaxNote(skillColumn.columnName)" step="0.1" [(ngModel)]="getTestNote(row.testResult.studentID, skillColumn.columnName).skillNote" (ngModelChange)="updateTestNote($event)"></mat-cell>
+    <mat-cell *matCellDef="let row">
+      <input matInput type="number" min="0" [max]="getMaxNote(skillColumn.columnName)" step="0.1" [(ngModel)]="getTestNote(row.testResult.studentID, skillColumn.columnName).skillNote" (ngModelChange)="updateTestNote($event, row.testResult.studentID, skillColumn.columnName)" ssiOnReturn>
+    </mat-cell>
   </ng-container>
 
   <mat-header-row *matHeaderRowDef="displayedColumns" class="header"></mat-header-row>
