--- a/src/app/components/test/test-results.component.html
+++ b/src/app/components/test/test-results.component.html
@@ -38,7 +38,7 @@
       </div>
     </mat-header-cell>
     <mat-cell *matCellDef="let row">
-      <input matInput type="number" min="0" [max]="getMaxNote(skillColumn.columnName)" step="0.1" [(ngModel)]="getTestNote(row.testResult.studentID, skillColumn.columnName).skillNote" (ngModelChange)="updateTestNote($event, row.testResult.studentID, skillColumn.columnName)" ssiOnReturn required>
+      <input matInput [id]="getInputId(row.testResult.studentID, colId)" type="number" min="0" [max]="getMaxNote(skillColumn.columnName)" step="0.1" [(ngModel)]="getTestNote(row.testResult.studentID, skillColumn.columnName).skillNote" (ngModelChange)="updateTestNote($event, row.testResult.studentID, skillColumn.columnName)" ssiOnReturn required>
     </mat-cell>
   </ng-container>
 
